--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -29,7 +29,8 @@
 	<?php if (isset($name)) : ?>
             <h2>Hello <?php echo htmlspecialchars($name); ?>!</h2>
     <?php else: ?>
-            <p>Try <a href="http://www.slimframework.com">SlimFramework</a>
+        <p>Try <a href="http://www.slimframework.com">SlimFramework</a></p>
+        <?php echo $path ?>
 	<?php endif; ?>
 </body>
 </html>
